--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div id="app"></div>
+  <script src="./libs/three.min.js"></script>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
