--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div id="app"></div>
-  <script src="./libs/three.min.js"></script>
-  <script type="module" src="/src/main.ts"></script>
+  <script src="./src/libs/three.min.js"></script>
+  <script type="module" src="/src/edit/main.ts"></script>
 </body>
 
 </html>
