--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="app"></div>
   <script src="./src/libs/three.min.js"></script>
-  <script type="module" src="/src/edit/main.ts"></script>
+  <script type="module" src="/src/editor/main.ts"></script>
 </body>
 
 </html>
